[tool.poetry]
name = "tverella"
version = "0.1.0"
description = ""
authors = ["J. Tipan Verella <tverella@tunein.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pandas = "^1.3.3"
jupyterlab = "^3.1.14"
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
